--- a/src/index.html
+++ b/src/index.html
@@ -745,7 +745,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 wow fadeInLeft">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2235.2618174047184!2d37.602909316080805!3d55.92749898597191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b53a0ac32d875f%3A0xe1064c1e68c2b74a!2z0JLRi9GB0YLQsNCy0L7Rh9C90LDRjywgNTMsINCS0LXRiNC60LgsINCc0L7RgdC60L7QstGB0LrQsNGPINC-0LHQuy4sIDEyNzU0Mw!5e0!3m2!1sru!2sru!4v1510535523155" width="550" height="450" style="border:0" allowfullscreen></iframe>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.6097705081247!2d30.51708420000001!3d50.4483689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce5102781b5b%3A0xf57358c43862576!2z0JrQuNGX0LLRgdGM0LrQuNC5INC90LDRhtGW0L7QvdCw0LvRjNC90LjQuSDQsNC60LDQtNC10LzRltGH0L3QuNC5INCc0L7Qu9C-0LTQuNC5INGC0LXQsNGC0YA!5e0!3m2!1suk!2sua!4v1709026226179!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="550" height="450" style="border:0" allowfullscreen></iframe>
           </div>
           <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0 wow fadeInRight">
             <div class="contacts_info">
